INCLUDES += -I$(srcdir)/../../3rdparty/tinyxml/
INCLUDES += -I$(srcdir)/../../include/common/
INCLUDES += -I$(srcdir)/../../include/ascent-shared/ 
INCLUDES += -I$(srcdir)/../../include/server/
INCLUDES += -I$(srcdir)/../rewrite/

noinst_LIBRARIES = \
	libcommon.a

libcommon_a_SOURCES = \
	EveClientSession.cpp \
	EveClientSession.h \
	EveClientSocket.cpp \
	EveClientSocket.h \
	Space.cpp \
	Space.h \
	SpaceRunnable.cpp


